--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,7 @@
   direction: rtl;
   .visibility {
     font-size: 24px !important;
+    color: white;
   }
 }
 
@@ -92,7 +93,6 @@
   border-radius: 2px;
   margin: 0px;
   display: inline-block;
-  align: center;
   transition: all 0.25s linear;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.4);
   font-size: 24px;
@@ -143,7 +143,6 @@
 }
 .Mui-disabled {
   font-size: 14px !important;
-  //width: 60% !important;
 }
 .MuiCardContent-root {
   margin-left: 26px;
@@ -160,4 +159,51 @@
 }
 .select-item {
   font-size: 14px !important;
+}
+.circle {
+  color: #bdbdbd;
+  font-size: 24px;
+  margin-top: 7px;
+}
+.circle-question {
+  margin-left: -15px;
+  .input {
+    font-size: 14px !important;
+  }
+  .MuiInputBase-input {
+    font-size: 14px !important;
+  }
+}
+.add-option {
+  margin-left: -15px;
+  margin-top: 3px;
+  .link {
+    font-size: 12px;
+    color: #bdbdbd;
+  }
+}
+.radio {
+  color: #673ab7 !important;
+}
+.checkbox {
+  color: #673ab7 !important;
+}
+.MuiSvgIcon-root {
+  font-size: 24px !important;
+}
+.checkbox-layout {
+  margin-left: 0px !important;
+}
+.label {
+  font-size: 14px !important;
+}
+.MuiTypography-body1 {
+  font-size: 14px !important;
+}
+.MuiAppBar-colorPrimary {
+  background-color: #673ab7 !important;
+}
+.form {
+  margin: 0 auto;
+  width: 640px;
 }
