--- a/src/App.scss
+++ b/src/App.scss
@@ -208,3 +208,21 @@
 .MuiSwitch-colorPrimary.Mui-checked {
   color: #673ab7 !important;
 }
+@media screen and (max-width: 1200px) {
+  .designer {
+    -webkit-column-count: 1;
+    -webkit-column-gap: 1.25rem;
+    column-count: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 15px;
+  }
+  .menu{
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .MuiInputBase-root{
+    width: 100% !important;
+  }
+}
